--- a/Assignment_1/Assignment_1/.classpath
+++ b/Assignment_1/Assignment_1/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry excluding="images/" kind="src" path="src"/>
 	<classpathentry kind="src" path="Bilder"/>
+	<classpathentry excluding="src/|Bilder/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
