--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\oliver\\Documents\\GitHub\\KD405A_-Oliver-_-Lundahl-\\Assignment_3","type":"PROJECT","hints":{"PROJECT_NAME":"Assignment_3"}},"ABSENT"]]
